src/components/Templates/CarouselList/CarouselList.scss
.qui .qui-carousel-list-card {
  background-color: #ffffff;
  padding: 1.5em;
  border-radius: 1em;
  min-height: 30em;
  .qui-title-block {
    min-width: 12em;
    min-height: 10em;
  }
  .qui-title {
    font-size: 1.5em;
    padding: 0 0 0.2em 0;
  }
  .qui-sub-title {
    font-size: 1em;
  }
  .qui-carousel-list-image {
    width: 100%;
    border-radius: 1em;
    max-height: 15em;
    filter: drop-shadow(0px 5px 2px #a09797);
  }
  .qui-html-carousel {
    margin-top: 2em;
  }
  .qui-html-carousel .qui-html-slick-arrows {
    width: 100%;
    font-size: 2em;
  }
  .qui-html-slide {
    margin-bottom: 1em;
  }
  .qui-html-carousel .slick-dots {
    bottom: -1.8em;
  }
  .qui-html-carousel .slick-dots li button:before {
    font-size: 12px;
  }
  .qui-html-carousel .slick-dots li.slick-active button:before {
    font-size: 15px;
    color: #a6a6a6;
  }
}

//-----------------------------------------
// Diptych presenter styles
//-----------------------------------------
.qui-carousel-list-presenter-container {
  min-height: 30em;
  border-radius: 1em;
  padding: 1.5em;
  position: relative;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  .qui-carousel-list-presenter-title {
    .qui-text-block-area {
      width: 90%;
      margin: 0 1em 0 0em;
      text-align: left;
      font-weight: bolder;
      font-size: 1.5em;
      .qui-block-text {
        padding: 0.2em;
        transform: scaleY(1.3);
      }
    }
  }
  .qui-carousel-list-presenter-sub-title {
    .qui .qui-text-block-area {
      width: 60%;
      margin: 0 1em 0 0em;
      text-align: left;
      font-size: 1.1em;
      .qui-block-text {
        padding: 0.2em;
        transform: scaleY(1.2);
        font-weight: lighter;
      }
    }
  }
  .qui-html-slide {
    width: 80%;
  }
  .qui-html-carousel .qui-html-slick-arrows {
    top: 0.2em;
    width: 80%;
    position: relative;
    font-size: 2em;
    z-index: 1;
  }
  .qui-html-carousel .slick-dots {
    bottom: -2.3em;
    right: 20%;
  }
  .qui-html-carousel .slick-dots li {
    margin: 0 -3.9px;
  }
}
@media only screen and (min-width: 320px) {
  .qui .qui-carousel-list-card {
    min-height: 25em;
    .qui-clickable-image {
      height: 12em;
    }
  }
  .qui-carousel-list-presenter-container {
    .qui-carousel-list-presenter-image {
      height: 10em;
      position: absolute;
      bottom: 0;
      right: 0;
      z-index: 1;
    }
    .qui-text-block-area {
      font-weight: lighter;
      font-size: 1em;
    }
  }
}

@media only screen and (min-width: 481px) {
  .qui .qui-carousel-list-card {
    .qui-html-slide-container .qui-banner-card .qui-slider-card-box-content {
      font-size: 1.6em;
    }
  }
  .qui .qui-carousel-list-card,
  .qui-carousel-list-presenter-container {
    width: 22em;
    .qui-carousel-list-presenter-image {
      height: 12em;
      position: absolute;
      bottom: 0;
      right: 0;
      z-index: 1;
    }
    .qui-carousel-list-presenter-caption .qui-text-block-area {
      width: 14em;
    }
    .qui-html-slide-container .qui-banner-card .qui-slider-card-box-content {
      font-size: 1.4em;
    }
  }
}

